# rust-csrf

./: .travis.yml  Cargo.toml  Makefile  README.md  appveyor.yml
benches/: bench.rs
examples/: get.html  iron.rs  post.html
fuzz/: Cargo.toml
fuzz/fuzzers/: aes_gcm_parse_cookie.rs  aes_gcm_parse_token.rs
proto/: serial.proto
src/: core.rs  error.rs  iron.rs  lib.rs  serial.rs
src/server/: hyper.rs  iron.rs  mod.rs
