[package]
name = "csrf"
version = "0.3.1"
authors = [ "heartsucker <heartsucker@autistici.org>" ]
description = "CSRF protection primitives"
homepage = "https://github.com/heartsucker/rust-csrf"
repository = "https://github.com/heartsucker/rust-csrf"
documentation = "https://docs.rs/csrf"
readme = "README.md"
license = "MIT"
keywords = [ "csrf", "web", "security", "http" ]
categories = [ "web-programming", "authentication", "cryptography" ]

[badges]
travis-ci = { repository = "heartsucker/rust-csrf", branch = "master" }
appveyor = { repository = "heartsucker/rust-csrf", branch = "master", service = "github" }

[lib]
name = "csrf"
path = "./src/lib.rs"

[features]
iron = [ "typemap" ]

[dependencies]
byteorder = "1"
chrono = "0.4"
data-encoding = "2.0.0"
log = "0.3"
rust-crypto = "0.2"
rand = "0.3"
typemap = { version = "0.3", optional = true }
