[package]
name = "csrf"
version = "0.3.0"
authors = [ "heartsucker <heartsucker@autistici.org>" ]
description = "CSRF protection primitives"
homepage = "https://github.com/heartsucker/rust-csrf"
repository = "https://github.com/heartsucker/rust-csrf"
documentation = "https://docs.rs/csrf"
readme = "README.md"
license = "MIT"
keywords = [ "csrf", "web", "security", "http" ]
categories = [ "web-programming", "authentication", "cryptography" ]

[badges]
travis-ci = { repository = "heartsucker/rust-csrf", branch = "master" }
appveyor = { repository = "heartsucker/rust-csrf", branch = "master", service = "github" }

[lib]
name = "csrf"
path = "./src/lib.rs"

[features]
iron = [ "typemap" ]

[dependencies]
aead = "0.2.0"
aes-gcm = "0.5"
byteorder = "1"
chacha20poly1305 = "0.4.1"
chrono = "0.4"
data-encoding = "2.0.0"
generic-array = "0.12"
hmac = "0.7"
log = "0.3"
rand = "0.3"
sha2 = "0.8"
typemap = { version = "0.3", optional = true }
