[package]
name = "csrf"
version = "0.4.1"
edition = "2021"
authors = ["heartsucker <heartsucker@autistici.org>"]
description = "CSRF protection primitives"
homepage = "https://github.com/heartsucker/rust-csrf"
repository = "https://github.com/heartsucker/rust-csrf"
documentation = "https://docs.rs/csrf"
readme = "README.md"
license = "MIT"
keywords = ["csrf", "web", "security", "http"]
categories = ["web-programming", "authentication", "cryptography"]

[badges]
travis-ci = { repository = "heartsucker/rust-csrf", branch = "master" }
appveyor = { repository = "heartsucker/rust-csrf", branch = "master", service = "github" }

[lib]
name = "csrf"
path = "./src/lib.rs"

[features]
iron = ["typemap"]

[dependencies]
aead = "0.5"
aes-gcm = "0.10"
byteorder = "1"
chacha20poly1305 = "0.10"
chrono = "0.4"
data-encoding = "2.0"
generic-array = "1.0"
hmac = "0.12"
rand = "0.8"
sha2 = "0.10"
typemap = { version = "0.3", optional = true }
